# server/swagger-output.json
@@ -161,6 +161,9 @@
                 },
                 "tag": {
                   "example": "any"
+                },
+                "subscription_duration": {
+                  "example": "any"
                 }
               }
             }
@@ -3019,9 +3022,6 @@
           "401": {
             "description": "Unauthorized"
           },
-          "404": {
-            "description": "Not Found"
-          },
           "500": {
             "description": "Internal Server Error"
           }
@@ -3145,6 +3145,9 @@
                 },
                 "reviewTitle": {
                   "example": "any"
+                },
+                "review": {
+                  "example": "any"
                 }
               }
             }
@@ -3246,6 +3249,29 @@
           },
           "500": {
             "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/api/cloudnary/{imgUrl}": {
+      "delete": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "imgUrl",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "401": {
+            "description": "Unauthorized"
           }
         }
       }
